src/test/ui/issues/issue-52060.stderr
error[E0013]: constants cannot refer to statics, use a constant instead
  --> $DIR/issue-52060.rs:4:26
   |
LL | static B: [u32; 1] = [0; A.len()];
   |                          ^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0013`.
